err/fireworks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FireWorks-1.6.4.egg-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/fireworks'...
Listing './lib/python3.5/site-packages/fireworks/core'...
Listing './lib/python3.5/site-packages/fireworks/core/tests'...
Listing './lib/python3.5/site-packages/fireworks/examples'...
Listing './lib/python3.5/site-packages/fireworks/examples/custom_firetasks'...
Listing './lib/python3.5/site-packages/fireworks/examples/custom_firetasks/hello_world'...
Listing './lib/python3.5/site-packages/fireworks/examples/custom_firetasks/merge_task'...
Listing './lib/python3.5/site-packages/fireworks/examples/tutorial_examples'...
Listing './lib/python3.5/site-packages/fireworks/features'...
Listing './lib/python3.5/site-packages/fireworks/features/tests'...
Listing './lib/python3.5/site-packages/fireworks/flask_site'...
Listing './lib/python3.5/site-packages/fireworks/flask_site/static'...
Listing './lib/python3.5/site-packages/fireworks/flask_site/static/css'...
Listing './lib/python3.5/site-packages/fireworks/flask_site/static/images'...
Listing './lib/python3.5/site-packages/fireworks/flask_site/static/js'...
Listing './lib/python3.5/site-packages/fireworks/flask_site/templates'...
Listing './lib/python3.5/site-packages/fireworks/queue'...
Listing './lib/python3.5/site-packages/fireworks/scripts'...
Listing './lib/python3.5/site-packages/fireworks/tests'...
Listing './lib/python3.5/site-packages/fireworks/user_objects'...
Listing './lib/python3.5/site-packages/fireworks/user_objects/dupefinders'...
Listing './lib/python3.5/site-packages/fireworks/user_objects/firetasks'...
Listing './lib/python3.5/site-packages/fireworks/user_objects/firetasks/templates'...
Listing './lib/python3.5/site-packages/fireworks/user_objects/firetasks/tests'...
Listing './lib/python3.5/site-packages/fireworks/user_objects/queue_adapters'...
Listing './lib/python3.5/site-packages/fireworks/user_objects/queue_adapters/tests'...
Listing './lib/python3.5/site-packages/fireworks/utilities'...
Listing './lib/python3.5/site-packages/fireworks/utilities/tests'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_paginate'...
Listing './lib/python3.5/site-packages/flask_paginate-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/fw_tutorials'...
Listing './lib/python3.5/site-packages/fw_tutorials/dynamic_wf'...
Listing './lib/python3.5/site-packages/fw_tutorials/firetask'...
Listing './lib/python3.5/site-packages/fw_tutorials/python'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/gunicorn'...
Listing './lib/python3.5/site-packages/gunicorn/app'...
Listing './lib/python3.5/site-packages/gunicorn/http'...
Listing './lib/python3.5/site-packages/gunicorn/instrument'...
Listing './lib/python3.5/site-packages/gunicorn/workers'...
Listing './lib/python3.5/site-packages/gunicorn-19.7.1.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/monty'...
Listing './lib/python3.5/site-packages/monty/os'...
Listing './lib/python3.5/site-packages/monty-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
